# AI-validation

./: .gitignore  README.md  pyproject.toml
Group3/: good_model_onyx.ipynb  hint.txt  model1.ipynb  model2.ipynb  model_1.onnx  model_2.onnx  test_model1.ipynb  test_model1_metamorphic.ipynb  test_model1_smote.ipynb  test_model2.ipynb  test_model2_metamorphic.ipynb  test_model2_smote.ipynb
Project/: EDA.ipynb  tests_hill_climber.ipynb
Project/onnx-example-main/: ExampleGradientBoosting.ipynb  bad_model_onyx.ipynb  bad_model_onyx_daniela.ipynb  genetic_algorithm.ipynb  genetic_algorithm_10gen_results_our_models.txt  genetic_algorithm_our_models.ipynb  genetic_algorithm_results.txt  genetic_algorithm_results_2.txt  genetic_algorithm_results_3.txt  genetic_algorithm_results_4.txt  genetic_algorithm_results_5.txt  genetic_algorithm_results_6.txt  genetic_algorithm_their_models.ipynb  good_model.ipynb  good_model_onyx.ipynb  good_model_onyx.py  good_model_onyx_XGboost.ipynb  good_model_onyx_smote.ipynb  stochastic_hill_climber.ipynb  stochastic_hill_climber_our_models.ipynb  stochastic_hill_climber_results_other_group.txt  stochastic_hill_climber_results_our_group.txt  stochastic_hill_climber_their_models.ipynb
Project/onnx-example-main/model/: bad_model.onnx  gboost.onnx  good_model.onnx  good_model_smote.onnx
Project/onnx-example-main/testing_results/genetic/: genetic_algorithm_2gen_results_our_models.txt  genetic_algorithm_2gen_results_their_models.txt
Project/onnx-example-main/testing_results/stochastic/: stochastic_hill_climber_results_our_models.txt  stochastic_hill_climber_results_their_group.txt
lab_2/: lab_2_playing_with_images.ipynb  lab_2_playing_with_images_rodin.ipynb  lab_2_playing_with_images_saga.ipynb
lab_3_scikit/: full_branch_coverage_test_100_leaves.csv  full_branch_coverage_test_10_leaves.csv  gmsc-test.ipynb  gmsc-test_jasper.ipynb
lab_3_scikit/input/gmsc/: Data Dictionary.xls
lab_4/: lab_4.ipynb
(+6 files in other folders)
