[tool.poetry]
name = "ai-validation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
tensorflow = "2.15.0"
pillow = "10.2.0"
scipy = "1.12.0"
uuid = "1.30"
matplotlib = "*"
pandas = "2.2.0"
seaborn = "0.13.2"
scikit-learn = "1.4.1.post1"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
tensorrt = {version = "^8.6.1.post1", source = "nvidia"}
tensorrt-libs = {version = "^8.6.1", source = "nvidia"}
tensorrt-bindings = {version = "^8.6.1", source = "nvidia"}
scikit-image = "^0.22.0"
pyarrow = "14"
sympy = "^1.12"
onnx = "^1.15.0"
onnxruntime = "^1.17.1"
skl2onnx = "^1.16.0"
imblearn = "^0.0"
pingouin = "^0.5.4"
xgboost = "^2.0.3"
aif360 = "^0.6.0"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
notebook = "*"
ipykernel = "*"


[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"